languages/bevy_mod_scripting_lua_derive/tests/fail/missing-proxy-output-attr.stderr
error: Did not expect contextual receiver in constructing simple proxy type
 --> tests/fail/missing-proxy-output-attr.rs:8:32
  |
8 |     fn fn_returning_proxy() -> Self {
  |                                ^^^^
